--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack serve --env --port=3000",
-    "build:dev": "webpack --env mode=development",
-    "build:prod": "webpack --env mode=production"
+		"build:dev": "webpack --env mode=development",
+		"build:prod": "webpack --env mode=production"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,5 +22,8 @@
 		"webpack": "^5.69.1",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.3"
 	}
 }
