--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/node": "^17.0.21",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.11",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-dev-server": "^4.7.2",
 		"html-webpack-plugin": "^5.5.0",
@@ -24,6 +26,8 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
-		"dotenv": "^16.0.3"
+		"dotenv": "^16.0.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	}
 }
