--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack serve --env --port=3000",
+		"start": "webpack serve --env mode=development",
 		"build:dev": "webpack --env mode=development",
 		"build:prod": "webpack --env mode=production"
 	},
