feat: + eslint, prettier, eslint-config-react-app

--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
 		"@types/webpack-dev-server": "^4.7.2",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.6.0",
+		"eslint": "^8.34.0",
+		"eslint-config-react-app": "^7.0.1",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.5.3",
+		"prettier": "^2.8.4",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
