--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": "stylelint-config-standard-scss",
+	"extends": ["stylelint-config-standard-scss", "stylelint-config-clean-order"],
 	"rules": {
 		"indentation": [2],
 		"selector-class-pattern": null
