--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
-		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+		"unit": "jest --config ./config/jest.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -32,6 +33,7 @@
 		"eslint-plugin-i18next": "^5.1.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^29.4.2",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
 		"sass": "^1.49.9",
