--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-		"unit": "jest --config ./config/jest.config.js"
+		"unit": "jest --config ./config/jest/jest.config.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +21,7 @@
 		"@babel/preset-env": "^7.16.11",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@svgr/webpack": "^6.2.1",
+		"@types/jest": "^29.4.0",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
@@ -34,6 +35,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.4.2",
+		"jest-environment-jsdom": "^29.4.2",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
 		"sass": "^1.49.9",
