--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"start": "webpack serve --env mode=development",
 		"build:dev": "webpack --env mode=development",
 		"build:prod": "webpack --env mode=production",
+		"analyze:prod": "webpack --env mode=production analyze=true",
+		"analyze:dev": "webpack --env mode=development analyze=true",
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
@@ -27,6 +29,7 @@
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
 		"@types/webpack": "^5.28.0",
+		"@types/webpack-bundle-analyzer": "^4.4.1",
 		"@types/webpack-dev-server": "^4.7.2",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.6.0",
@@ -49,6 +52,7 @@
 		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5",
 		"webpack": "^5.69.1",
+		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
 	},
