fix: + src to include in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 			"module": "CommonJS"
 		}
 	},
-	"include": ["./config/jest/setupTests.ts"]
+	"include": ["./config/jest/setupTests.ts", "src"]
 }
