--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jest-environment-jsdom": "^29.4.2",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
+		"regenerator-runtime": "^0.13.9",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
