--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-		"unit": "jest --config ./config/jest/jest.config.ts"
+		"unit": "jest --config ./config/jest/jest.config.ts",
+		"storybook": "start-storybook -p 6006 -c ./config/storybook --no-open",
+		"build-storybook": "build-storybook -c ./config/storybook"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,6 +26,14 @@
 		"@babel/preset-react": "^7.16.7",
 		"@babel/preset-typescript": "^7.16.7",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+		"@storybook/addon-actions": "^6.5.16",
+		"@storybook/addon-essentials": "^6.5.16",
+		"@storybook/addon-interactions": "^6.5.16",
+		"@storybook/addon-links": "^6.5.16",
+		"@storybook/builder-webpack5": "^6.5.16",
+		"@storybook/manager-webpack5": "^6.5.16",
+		"@storybook/react": "^6.5.16",
+		"@storybook/testing-library": "^0.0.13",
 		"@svgr/webpack": "^6.2.1",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
@@ -46,7 +56,7 @@
 		"jest-environment-jsdom": "^29.4.2",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
-		"regenerator-runtime": "^0.13.9",
+		"react-refresh": "^0.14.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
