--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:ui": "npx loki test",
+    "test:ui:approve": "npx loki approve",
     "storybook": "start-storybook -p 6006 -c ./config/storybook --no-open",
     "storybook:build": "build-storybook -c ./config/storybook"
   },
