--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Installing dependencies
         run: npm install
-      - name: Build the app
+      - name: Building the app
         run: npm run build:prod
       - name: Linting typescript with ESLint
         run: npm run lint:ts
