--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,7 @@ jobs:
         run: npm run lint:scss
       - name: Unit testing with Jest
         run: npm run test:unit
+      - name: Building storybook
+        run: npm run storybook:build
+      - name: Screenshot testing with Loki
+        run: npm run test:ui:ci
