--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "jest --config ./config/jest/jest.config.ts",
 		"test:ui": "npx loki test",
+		"test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
 		"test:ui:ok": "npx loki approve",
 		"storybook": "start-storybook -p 6006 -c ./config/storybook --no-open",
 		"storybook:build": "build-storybook -c ./config/storybook"
