chore: attempt to further optimize ci pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,10 @@
-run-name: Building, linting, and testing 🔎
+run-name: Linting, testing, and building 🔎
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Installing dependencies
-        run: npm ci
-      - name: Building the app
-        run: npm run build:prod
-
   linting:
     runs-on: ubuntu-latest
     strategy:
@@ -44,7 +28,6 @@ jobs:
     strategy:
       matrix:
         node-version: [17.x]
-    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Starting Node.js ${{ matrix.node-version }}
@@ -89,3 +72,20 @@ jobs:
         run: npm run test:unit
       - name: Screenshot testing with Loki
         run: npm run test:ui:ci
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [unit-testing, screenshot-testing]
+    strategy:
+      matrix:
+        node-version: [17.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Starting Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Installing dependencies
+        run: npm ci
+      - name: Building the app
+        run: npm run build:prod
