--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,25 @@ jobs:
       - name: Linting scss with Stylelint
         run: npm run lint:scss
 
-  storybook:
+  unit-testing:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [17.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Starting Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Installing dependencies
+        run: npm ci
+      - name: Unit testing with Jest
+        run: npm run test:unit
+
+  storybook-and-screenshot-testing:
+    runs-on: ubuntu-latest
+    needs: build
     strategy:
       matrix:
         node-version: [17.x]
@@ -38,44 +55,12 @@ jobs:
         run: npm ci
       - name: Starting Storybook
         run: npm run storybook:build
-
-  screenshot-testing:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
-    needs: storybook
-    steps:
-      - uses: actions/checkout@v2
-      - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Installing dependencies
-        run: npm ci
       - name: Screenshot testing with Loki
         run: npm run test:ui:ci
 
-  unit-testing:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
-    needs: linting
-    steps:
-      - uses: actions/checkout@v2
-      - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Installing dependencies
-        run: npm ci
-      - name: Unit testing with Jest
-        run: npm run test:unit
-
   build:
     runs-on: ubuntu-latest
-    needs: [unit-testing, screenshot-testing]
+    needs: [linting, unit-testing, storybook-and-screenshot-testing]
     strategy:
       matrix:
         node-version: [17.x]
