--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"test:ui": "npx loki test",
 		"test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
 		"test:ui:ok": "npx loki approve",
+		"test:ui:json": "node scripts/generate-visual-json-report.js",
+		"test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
+		"test:ui:report": "npm run test:ui:json && npm run test:ui:html",
 		"storybook": "start-storybook -p 6006 -c ./config/storybook --no-open",
 		"storybook:build": "build-storybook -c ./config/storybook"
 	},
@@ -61,6 +64,7 @@
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
 		"react-refresh": "^0.14.0",
+		"reg-cli": "^0.17.7",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
