--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,9 @@
 	"extends": ["stylelint-config-standard-scss", "stylelint-config-clean-order"],
 	"rules": {
 		"indentation": "tab",
-		"selector-class-pattern": null
+		"selector-class-pattern": null,
+		"string-quotes": null,
+		"value-list-comma-newline-after": null,
+		"declaration-colon-newline-after": null
 	}
 }
