--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
 				"markupOnly": true,
 				"ignoreAttribute": ["aria-label"]
 			}
-		]
+		],
+		"react-hooks/rules-of-hooks": "error",
+		"react-hooks/exhaustive-deps": "error"
 	},
 	"overrides": [
 		{
