chore: + sb-addon-themes, - @sb/addon-essentials

--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"@babel/preset-typescript": "^7.16.7",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@storybook/addon-actions": "^6.5.16",
-		"@storybook/addon-essentials": "^6.5.16",
 		"@storybook/addon-interactions": "^6.5.16",
 		"@storybook/addon-links": "^6.5.16",
 		"@storybook/builder-webpack5": "^6.5.16",
@@ -69,6 +68,7 @@
 		"reg-cli": "^0.17.7",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
+		"storybook-addon-themes": "^6.1.0",
 		"style-loader": "^3.3.1",
 		"stylelint": "^14.16.1",
 		"stylelint-config-clean-order": "^5.0.0",
