--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@babel/preset-typescript": "^7.16.7",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@storybook/addon-actions": "^6.5.16",
+		"@storybook/addon-essentials": "^6.5.16",
 		"@storybook/addon-interactions": "^6.5.16",
 		"@storybook/addon-links": "^6.5.16",
 		"@storybook/builder-webpack5": "^6.5.16",
