--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.tsx",
 	"scripts": {
 		"start": "webpack serve --env mode=development",
+		"start:dev:server": "node ./json-server/index.js",
 		"build:dev": "webpack --env mode=development",
 		"build:prod": "webpack --env mode=production",
 		"analyze:prod": "webpack --env mode=production analyze=true",
@@ -62,6 +63,7 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.4.2",
 		"jest-environment-jsdom": "^29.4.2",
+		"json-server": "^0.17.3",
 		"loki": "^0.31.1",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
