--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,22 @@
 {
 	"i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"],
 	"i18n-ally.keystyle": "flat",
+	"i18n-ally.namespace": true,
+	"i18n-ally.dirStructure": "auto",
+	"i18n-ally.defaultNamespace": "translation",
 	"eslint.validate": ["typescript", "typescriptreact"],
 	"stylelint.validate": ["scss"],
 	"jestrunner.configPath": "/config/jest/jest.config.ts",
 	"cSpell.words": [
-    "adipiscing",
-    "amet",
-    "blinkmacsystemfont",
-    "Ilya",
-    "Kruchinin",
-    "languagedetector",
-    "pmmmwh",
-    "reduxjs",
-    "svgr",
-    "сaйте"
-  ]
+		"adipiscing",
+		"amet",
+		"blinkmacsystemfont",
+		"Ilya",
+		"Kruchinin",
+		"languagedetector",
+		"pmmmwh",
+		"reduxjs",
+		"svgr",
+		"сaйте"
+	]
 }
