--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"build:prod": "webpack --env mode=production",
 		"analyze:prod": "webpack --env mode=production analyze=true",
 		"analyze:dev": "webpack --env mode=development analyze=true",
-		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
-		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+		"lint:ts": "npx eslint \"**/*.{j,t}s{x,}\"",
+		"lint:ts:fix": "npx eslint \"**/*.{j,t}s{x,}\" --fix",
+		"format:ts": "npx prettier --write \"**/*.{j,t}s{x,}\"",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "jest --config ./config/jest/jest.config.ts",
@@ -60,10 +61,12 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"husky": "^8.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.4.2",
 		"jest-environment-jsdom": "^29.4.2",
 		"json-server": "^0.17.3",
+		"lint-staged": "^13.2.2",
 		"loki": "^0.31.1",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "^2.8.4",
