chore: test pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 		"build:prod": "webpack --env mode=production",
 		"analyze:prod": "webpack --env mode=production analyze=true",
 		"analyze:dev": "webpack --env mode=development analyze=true",
-		"lint:ts": "npx eslint \"**/*.{j,t}s{x,}\"",
-		"lint:ts:fix": "npx eslint \"**/*.{j,t}s{x,}\" --fix",
-		"format:ts": "npx prettier --write \"**/*.{j,t}s{x,}\"",
+		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
+		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+		"format:ts": "npx prettier --write \"**/*.{ts,tsx}\"",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "jest --config ./config/jest/jest.config.ts",
