--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-	"*.{j,t}s{x,}": ["npm run lint:ts:fix", "npm run format:ts"],
+	"*.{js,jsx,ts,tsx}": ["npm run lint:ts:fix", "npm run format:ts"],
 	"*.{css,scss}": "npm run lint:scss:fix"
 }
