--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,33 +39,8 @@ jobs:
       - name: Unit testing with Jest
         run: npm run test:unit
 
-  storybook-and-screenshot-testing:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Installing dependencies
-        run: npm ci
-      - name: Starting Storybook
-        run: npm run storybook:build
-      - name: Screenshot testing with Loki
-        run: npm run test:ui:ci
-      - name: Upload fail screenshots
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v3
-        with:
-          path: '.loki/difference'
-          name: loki-fail-difference
-
-  # build:
+  # storybook-and-screenshot-testing:
   #   runs-on: ubuntu-latest
-  #   needs: [linting, unit-testing, storybook-and-screenshot-testing]
   #   strategy:
   #     matrix:
   #       node-version: [17.x]
@@ -77,5 +52,30 @@ jobs:
   #         node-version: ${{ matrix.node-version }}
   #     - name: Installing dependencies
   #       run: npm ci
-  #     - name: Building the app
-  #       run: npm run build:prod
+  #     - name: Starting Storybook
+  #       run: npm run storybook:build
+  #     - name: Screenshot testing with Loki
+  #       run: npm run test:ui:ci
+  #     - name: Upload fail screenshots
+  #       if: ${{ failure() }}
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         path: '.loki/difference'
+  #         name: loki-fail-difference
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [linting, unit-testing]
+    strategy:
+      matrix:
+        node-version: [17.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Starting Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Installing dependencies
+        run: npm ci
+      - name: Building the app
+        run: npm run build:prod
