--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,15 +8,16 @@
 	"stylelint.validate": ["scss"],
 	"jestrunner.configPath": "/config/jest/jest.config.ts",
 	"cSpell.words": [
-		"adipiscing",
-		"amet",
-		"blinkmacsystemfont",
-		"Ilya",
-		"Kruchinin",
-		"languagedetector",
-		"pmmmwh",
-		"reduxjs",
-		"svgr",
-		"сaйте"
-	]
+    "adipiscing",
+    "amet",
+    "blinkmacsystemfont",
+    "Ilya",
+    "Kruchinin",
+    "languagedetector",
+    "Parens",
+    "pmmmwh",
+    "reduxjs",
+    "svgr",
+    "сaйте"
+  ]
 }
